Updated Export Method. Now using UMD.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     </head>
     <body>
-        <script src="js/object-reader.js"></script>
+        <script src="../dist/bundle.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
